# fa

./: README.md
1.1/: CMakeLists.txt  README.md  main.c
1.1/include/: flags.h
1.1/source/: flags.c
1.2/: CMakeLists.txt  README.md  main.c
1.2/include/: func.h
1.2/source/: func.c
1.3/: CMakeLists.txt  README.md  main.c
1.3/include/: auxiliary.h  flags.h
1.3/source/: auxiliary.c  flags.c
1.4/: CMakeLists.txt  README.md  main.c
1.4/include/: epsilon_calculation.h  gamma_calculation.h  ln2_calculation.h  pi_calculation.h  sqrt2_calculation.h
1.4/source/: epsilon_calculation.c  factorial.c  gamma_calculation.c  ln2_calculation.c  pi_calculation.c  sqrt2_calculation.c
1.5/: CMakeLists.txt  README.md  main.c
1.5/include/: functions.h  usage.h  validation.h
1.5/source/: functions.c  usage.c  validation.c
1.6/: CMakeLists.txt  README.md  main.c
1.6/include/: functions.h  validation.h
1.6/source/: functions.c  validation.c
1.7/: CMakeLists.txt  README.md  main.c
1.7/include/: functions.h
1.7/source/: functions.c
2.1/: CMakeLists.txt  README.md  main.c
2.1/include/: fractions.h  mathf.h
2.1/source/: fractions.c  mathf.c
2.2/: CMakeLists.txt  README.md  main.c
2.2/include/: errors.h  functions.h
2.2/source/: functions.c
2.3/: CMakeLists.txt  README.md  main.c  test_output.txt
2.3/include/: flags.h  print.h
2.3/source/: flags.c  print.c
2.5/: CMakeLists.txt  README.md  input.txt  main.c
2.5/include/: function.h
2.5/source/: function.c
3.1/: CMakeLists.txt  README.md  main.c
3.1/include/: function.h  tests.h
3.1/source/: function.c
3.1/testing/: tests.c
3.2/: CMakeLists.txt  README.md  main.c
3.2/include/: vector.h
3.2/testing/: vector_double.c  vector_int.c  vector_string.c
3.6/: CMakeLists.txt  README.md  main.c
3.6/include/: function.h  stack.h  tests.h
3.6/source/: function.c
3.6/testing/: tests.c
