cmake_minimum_required(VERSION 3.10)
project(print_program C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")

add_executable(print_program 
    main.c 
    source/flags.c
    source/print.c
)

target_include_directories(print_program  PRIVATE)

target_link_libraries(print_program  m)